engine/codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__trust_directory__tests__renders_snapshot_for_remote_git_subdirectory.snap
---
source: tui/src/onboarding/trust_directory.rs
expression: "terminal.backend().to_string().lines().map(str::trim_end).collect::<Vec<_>>().join(\"\\n\")"
---

  Folder access
  /srv/remote/project/nested

  Note: You’re in a subdirectory of a Git project. Trusting will
  apply to the repository root:
  /srv/remote/project

  Trust this folder? Codex can read, edit, and run files here,
  subject to your permission settings. Folder settings can run code
  automatically, even without a model request. Continue only if you
  trust these files. Your trust decision will be saved.

› 1. Trust and continue
  2. Back to Agent Command Center

  enter continue · esc back
